# BasicOpenGLRenderer

./: .gitignore  CMakeLists.txt  README.md  dependencies.cmake
res/shaders/: basic.frag  basic.vert  whiteShader.frag  whiteShader.vert
src/: Application.cpp  Application.h  CMakeLists.txt  Debug.h  Layer.h  LayerStack.cpp  LayerStack.h  Window.cpp  Window.h  debug.h  main.cpp  sandbox.cpp  window.cpp  window.h
src/App/: main.cpp
src/Application/: EditorLayer.cpp  EditorLayer.h  MVPTestLayer.cpp  MVPTestLayer.h  SandboxLayer.cpp  SandboxLayer.h  main.cpp
src/Core/: Application.cpp  Application.h  Layer.h  LayerStack.cpp  LayerStack.h  UUID.h  Window.h
src/Engine/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h
src/Engine/Components/: Component.h
src/Engine/Core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Debug.h  ImGuiImpl.cpp  ImGuiImpl.h  Layer.h  LayerStack.h  UUID.cpp
src/Engine/Events/: ApplicationEvents.h  Event.h
src/Engine/ImGui/: ImGuiImpl.cpp  ImGuiImpl.h
src/Engine/Math/: Transform.cpp  Transform.h
src/Engine/Maths/: Transform.cpp  Transform.h
src/Engine/Objects/: Camera.cpp  Camera.h  GameObject.h
src/Engine/Platform/OpenGL/: Application.cpp  Application.h  Window.cpp  Window.h
src/Engine/Renderer/: Camera.cpp  Camera.h  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.h  Texture.cpp  Texture.h
src/Engine/Renderer/buffers/: IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.h
src/Engine/Scene/: Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  GameObject.cpp  GameObject.h  MeshFactory.cpp  MeshFactory.h  Scene.cpp  Scene.h
src/Engine/Scene/Components/: Component.h  MeshRenderer.h
src/Events/: ApplicationEvents.h  Event.h  InputEvents.h  WindowEvents.h
src/Maths/: Transform.cpp  Transform.h
src/Renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Renderer/buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Runtime/: EditorLayer.cpp  EditorLayer.h  SandboxLayer.h  main.cpp
src/math/vectors/: Vector2.h  Vector3.h
src/renderer/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  shader.h
src/renderer/buffers/: IndexBuffer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
